[gd_scene load_steps=6 format=3 uid="uid://c0w3ko8iwwppe"]

[ext_resource type="Script" path="res://src/scripts/Splash/SplashScreen.gd" id="1_q6wvw"]
[ext_resource type="Texture2D" uid="uid://byio0luq7uppw" path="res://assets/images/Background/StarField.png" id="2_pucxk"]
[ext_resource type="Texture2D" uid="uid://yje1ph1bsm4n" path="res://assets/images/Splash/game_logo.png" id="3_qlgi0"]

[sub_resource type="Animation" id="Animation_ir7op"]
resource_name = "modulate"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ApplicationTitle:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.4, 0.7, 1, 1.3, 2.6, 3, 3.3, 3.6, 3.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0.0705882, 0.0705882, 0.0705882, 1), Color(0.25098, 0.25098, 0.25098, 1), Color(0.392157, 0.392157, 0.392157, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(0.392157, 0.392157, 0.392157, 1), Color(0.180392, 0.180392, 0.180392, 1), Color(0.0705882, 0.0705882, 0.0705882, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yo0ea"]
_data = {
"modulate": SubResource("Animation_ir7op")
}

[node name="SplashScreen" type="Node2D"]
script = ExtResource("1_q6wvw")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0.0196078, 0.0196078, 0.0196078, 1)

[node name="StarField" type="Sprite2D" parent="."]
position = Vector2(963.999, 541.998)
scale = Vector2(1.88281, 1.05859)
texture = ExtResource("2_pucxk")
modulate = Color(0.3, 0.3, 0.3, 0.5)
metadata/_edit_lock_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_yo0ea")
}
autoplay = "modulate"

[node name="ApplicationTitle" type="Sprite2D" parent="."]
self_modulate = Color(0, 0, 0, 0)
position = Vector2(960, 540)
scale = Vector2(1.2, 1.2)
texture = ExtResource("3_qlgi0")

[node name="LoadingContainer" type="VBoxContainer" parent="."]
offset_left = 760.0
offset_top = 800.0
offset_right = 1160.0
offset_bottom = 900.0
alignment = 1

[node name="LoadingLabel" type="Label" parent="LoadingContainer"]
layout_mode = 2
text = "Loading..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="LoadingContainer"]
layout_mode = 2
custom_minimum_size = Vector2(400, 8)
max_value = 100.0
step = 1.0
value = 0.0
show_percentage = false

[node name="VersionLabel" type="Label" parent="."]
offset_left = 1720.0
offset_top = 1020.0
offset_right = 1920.0
offset_bottom = 1060.0
text = "v1.0.0"
horizontal_alignment = 2
vertical_alignment = 1
modulate = Color(0.6, 0.6, 0.6, 1)

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
